
Changelog
=========

4.1.0 (unreleased)
------------------

- Added journalization for document removing and restoring.
  [phgross]

- Added new mail workflow state `mail-state-removed`.
  [phgross]

- Add new action `Remove` to trash tab and add remove confirmation view.
  [phgross]

- Dropped prevent_deletion handler.
  [phgross]

- Added new document workflow state `document-state-removed`.
  [phgross]

- Add new permission `Remove GEVER content`.
  [phgross]

- Disable docproperty updating in YearfolderStorer process.
  [phgross]

- Rewrite gever setup.
    - Introduce two zcml directives to configure deployments and ldap profiles.
    - Simplify deloyment form, remove multi-client configuration options.
    - Update branding, add onegovgever logo.
    - Add custom setuphandlers for local roles, initial repository and document templates.
    - Configure development options and add environment variable to enable them easily.

  [deiferni]


4.0.4 (2014-11-13)
------------------

- Extract attachments view: fixed icon display in attachment listing.
  [phgross]

- Disable paste action for mails.
  [phgross]

- Set proper Content-Type header in responses from LDAP control panel views.
  [lgraf]

- Fix Unicode handling in OGDSUpdater.
  [lgraf]

4.0.3 (2014-11-10)
------------------

- Dossier responsible field: use current admin unit's user, instead of only
  current orgunit's one.
  [phgross]

- Forwarding Transitioncontroller: Fixed assign_to_dossier check.
  [phgross]

- Fixed mail download for mails with already CRLF.
  [phgross]

- Add new type Inbox Container.
  [phgross]

- Task byline: Use adminUnit abbreviation instead of label for sequence_number display.
  [phgross]


4.0.2 (2014-11-03)
------------------

- Fixed version download, when download confirmation is deactivated.
  [phgross]

- Mail Download: Convert LF to CRLF, to avoid displaing problems in MS Outlook.
  [phgross]

- Fixed UnicodeEncodeError in task link generation.
  [phgross]

