@@ -5,6 +5,9 @@ Changelog
 4.1.0 (unreleased)
 ------------------
 
+- Dropped no longer used document state journalization.
+  [phgross]
+
 - Added journalization for document removing and restoring.
   [phgross]
 
